1.9.12 - 2019-xx-xx

  1. Update all dependencies to latest versions.


1.9.11 - 2018-12-20

  1. Changed the default value of `fs.gs.path.encoding` to 'uri-path', the new
     codec introduced in 1.4.5. The old behavior can be restored by setting
     `fs.gs.path.encoding` to 'legacy'.

  2. Update all dependencies to latest versions.

  3. Don't use `fs.gs.performance.cache.dir.metadata.prefetch.limit` property to
     prefetch metadata in `PerformanceCachingGoogleCloudStorage` - always use
     single objects list request, because prefetching metadata with multiple
     list requests (when directory contains a lot of files) could introduce
     performance penalties when using performance chache.

  4. Add an option to lazily initialize `GoogleHadoopFileSystem` instances:

       fs.gs.lazy.init.enable (default: false)

  5. Add ability to unset `fs.gs.system.bucket` with an empty string value:

       fs.gs.system.bucket=

  6. Set default value for "fs.gs.working.dir" property to "/".


1.9.10 - 2018-11-01

  1. Use Hadoop `CredentialProvider` API to retrieve proxy credentials.

  2. Remove 1024 compose components limit from `SYNCABLE_COMPOSITE` output
     stream type.


1.9.9 - 2018-10-19

  1. Add an option for running flat and regular glob search algorithms in
     parallel:

       fs.gs.glob.concurrent.enable (default: true)

     Returns a result of an algorithm that finishes first and cancels the other
     algorithm.

  2. Add an option to provide path for configuration override file:

       fs.gs.config.override.file (default: null)

     Connector overrides its configuration with values provided in this file.
     This file should be in XML format that follows the same schema as Hadoop
     configuration files.

1.9.8 - 2018-10-03

  1. Expose `FileChecksum` in `GoogleHadoopFileSystem` via property:

      fs.gs.checksum.type (default: NONE)

     Valid property values: `NONE`, `CRC32C`, `MD5`.

     CRC32c checksum is compatible with HDFS-13056.
