@@ -2,6 +2,8 @@
 
   1. Update all dependencies to latest versions.
 
+  2. Improve GCS IO exception messages.
+
 
 1.9.11 - 2018-12-20
 
